# AppVer2

./: .gitattributes  .gitignore  README.md  README.md.bak  settings.gradle
app/src/main/cpp/AREngine/: CMakeLists.txt
app/src/main/cpp/AREngine/.backup_CameraTracking/: CMakeLists.txt  config.json
app/src/main/cpp/AREngine/.backup_CameraTracking/include/: CameraTracking.h  CameraTrackingServer.h  Relocalization.h  debug_utils.hpp
app/src/main/cpp/AREngine/.backup_CameraTracking/src/: CameraTracking.cpp  CameraTrackingServer.cpp
app/src/main/cpp/AREngine/ARInput/: CMakeLists.txt
app/src/main/cpp/AREngine/ARInput/include/: ARInput.h
app/src/main/cpp/AREngine/ARInput/src/: ARInput.cpp
app/src/main/cpp/AREngine/AlignModule/: CMakeLists.txt
app/src/main/cpp/AREngine/AlignModule/include/: AlignModule.h  AlignModuleServer.h
app/src/main/cpp/AREngine/AlignModule/src/: AlignModule.cpp  AlignModuleServer.cpp
app/src/main/cpp/AREngine/App/: VFR.json  sceneObjects_Norm.json  sceneObjects_T01.json  sceneObjects_T02.json
app/src/main/cpp/AREngine/App/CameraConfigs/: Camera_rsD415.json
app/src/main/cpp/AREngine/Basic/: CMakeLists.txt  cvfsrc.cpp
app/src/main/cpp/AREngine/Basic/asset/cvf/: CMakeLists.txt  ffdef.h  libc-02.h
app/src/main/cpp/AREngine/Basic/asset/cvf/BFC/: argv.cpp  array.h  bfstream.cpp  bfstream.h  cfg.h  commands.h  ctc.h  def.h  diskmap.h  err.cpp  err.h  factory.h  fio.cpp  fio.h  fwd.h  log.h  matrix.h  mem_buf_large.cpp  mem_sys.cpp  netcall.h  object.h  portable_linux.cpp  portable_std.cpp  portable_win32.cpp  portable_wx.cpp  src.cpp  ssh.cpp  ssh.h  stdf.cpp  thread.cpp  thread.h  type.h  vector.h
app/src/main/cpp/AREngine/Basic/asset/socketpp/: CMakeLists.txt
app/src/main/cpp/AREngine/Basic/include/: ARModule.h  App.h  BasicData.h  ConfigLoader.h  ConfigLoader.tpp  Net.h  ObjManager.h  PoseUtils.h  RPC.h  RPCServer.h  listener.h  opencv3_definition.h
app/src/main/cpp/AREngine/Basic/src/: App.cpp  BasicData.cpp  ConfigLoader.cpp  Net.cpp  PoseUtils.cpp  RPC.cpp  RPCServer.cpp
app/src/main/cpp/AREngine/CameraTracking/include/: CameraTracking.h  CameraTrackingServer.h  debug_utils.hpp
app/src/main/cpp/AREngine/CameraTracking/src/: CameraTracking.cpp  CameraTrackingServer.cpp
app/src/main/cpp/AREngine/Detection/: CMakeLists.txt  config.json
app/src/main/cpp/AREngine/Detection/include/: Detection.h  SegAndPoseEstimation.h  poseEstimation.grpc.pb.cc  poseEstimation.grpc.pb.h  poseEstimation.pb.cc  poseEstimation.pb.h
app/src/main/cpp/AREngine/Detection/src/: Detection.cpp  SegAndPoseEstimation.cpp
app/src/main/cpp/AREngine/InputRealSense/: CMakeLists.txt  config.json
app/src/main/cpp/AREngine/InputRealSense/include/: InputOffline.h  InputRealSense.h  realsense.h
app/src/main/cpp/AREngine/InputRealSense/src/: InputOffline.cpp  InputRealSense.cpp  realsense.cpp
app/src/main/cpp/AREngine/InteractiveUnderstanding/: CMakeLists.txt
app/src/main/cpp/AREngine/InteractiveUnderstanding/asset/CADDataManager/: init.json
app/src/main/cpp/AREngine/InteractiveUnderstanding/include/: AnimationPlayer.h  Animator.h  CollisionDetection.h  ExampleCollisionHandler.h  GesturePredictor.h  GestureUnderstanding.h  HandJoint.h  HeadUnderstanding.h  InteractionConfigLoader.h  InteractionInputOffline.h  PoseUnderstanding.h
app/src/main/cpp/AREngine/InteractiveUnderstanding/src/: AnimationPlayer.cpp  Animator.cpp  CollisionDetection.cpp  GesturePredictor.cpp  GestureUnderstanding.cpp  HeadUnderstanding.cpp  InteractionConfigLoader.cpp  InteractionInputOffline.cpp
app/src/main/cpp/AREngine/Location/: CMakeLists.txt
app/src/main/cpp/AREngine/Location/include/: Location.h  markerdetector.hpp
app/src/main/cpp/AREngine/Location/src/: Location.cpp
app/src/main/cpp/AREngine/ObjectTracking/: CMakeLists.txt  config.json
app/src/main/cpp/AREngine/ObjectTracking/asset/RBOT/: CMakeLists.txt
app/src/main/cpp/AREngine/ObjectTracking/include/: ObjectTracking.h  ObjectTrackingServer.h  RbotTracking.h
app/src/main/cpp/AREngine/ObjectTracking/src/: ObjectTracking.cpp  ObjectTrackingServer.cpp  RbotTracking.cpp
app/src/main/cpp/AREngine/ObjectTracking2/: CMakeLists.txt
app/src/main/cpp/AREngine/ObjectTracking2/include/: ObjectTracking2.h
app/src/main/cpp/AREngine/ObjectTracking2/src/: ObjectTracking2.cpp  base.cpp  base.h  coreobjs.cpp  v1.BaseTracker1.h  v1.Detector.h  v1.DetectorModelData.h  v1.ManualInitor.h  v1.Tracker.h  vxbase.h
app/src/main/cpp/AREngine/PoseEstimationFetch/: CMakeLists.txt  README.md
app/src/main/cpp/AREngine/PoseEstimationFetch/include/: PoseEstimationFetch.h
app/src/main/cpp/AREngine/PoseEstimationFetch/src/: PoseEstimationFetch.cpp
app/src/main/cpp/AREngine/PoseEstimationRokid/: CMakeLists.txt
app/src/main/cpp/AREngine/PoseEstimationRokid/include/: PoseEstimationRokid.h
app/src/main/cpp/AREngine/PoseEstimationRokid/src/: PoseEstimationRokid.cpp
app/src/main/cpp/AREngine/RelocationGlass/include/: RelacationGlass.h
app/src/main/cpp/AREngine/RelocationGlass/src/: RelocationGlass.cpp
app/src/main/cpp/AREngine/Rendering/: CMakeLists.txt  run.sh
app/src/main/cpp/AREngine/Rendering/asset/: .gitignore  CMakeLists.txt  README.md
app/src/main/cpp/AREngine/Rendering/asset/include/: CADMesh.h  NvEncoderVK.h  encoder.h  renderGeo.fbs  screenshot.h  vsgRenderer.h
app/src/main/cpp/AREngine/Rendering/asset/src/: NvEncoderVK.cpp  encoder.cpp
app/src/main/cpp/AREngine/Rendering/include/: Rendering.h
app/src/main/cpp/AREngine/Rendering/src/: Rendering.cpp
app/src/main/cpp/AREngine/RenderingGlass/: CMakeLists.txt
app/src/main/cpp/AREngine/RenderingGlass/include/: RenderClient.h  SSAOPass.h  backgroundPass.h  pbrPass.h  prefilterPass.h  renderPassManager.h
app/src/main/cpp/AREngine/RenderingGlass/src/: RenderClient.cpp  RenderInterface.cpp  SSAOGeometryPass.cpp  backgroundPass.cpp  brdfPass.cpp  equirectangularToCubemapPass.cpp  irradiancePass.cpp  pbrPass.cpp  prefilterPass.cpp  shadowMappingDepthPass.cpp  templatePass.cpp
app/src/main/cpp/AREngine/data/: Animation.json  InteractionConfig.json
(+247 files in other folders)
