#add_library(ARENGINE_LIB INTERFACE)

add_subdirectory(Basic ${CMAKE_BINARY_DIR}/AREngine/Basic)
#add_subdirectory(App ${CMAKE_BINARY_DIR}/AREngine/App)


if(ENABLE_InteractiveUnderstanding)
    message("Add Module InteractiveUnderstanding")
    add_subdirectory(InteractiveUnderstanding ${CMAKE_BINARY_DIR}/AREngine/InteractiveUnderstanding)
endif ()

if(ENABLE_PoseEstimationFetch)
    message("Add Module PoseEstimationFetch")
    add_subdirectory(PoseEstimationFetch ${CMAKE_BINARY_DIR}/AREngine/PoseEstimationFetch)
endif ()

#add_subdirectory(Basic)

#if(ENABLE_POSEALIGN)
#    add_subdirectory(Basic)
#    add_subdirectory(ObjectTracking)
#    target_link_libraries(ARENGINE_LIB INTERFACE ObjectTracking Basic)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${ObjectTracking_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_VFR)
#    add_subdirectory(Basic)
#    add_subdirectory(ObjectTracking)
#    target_link_libraries(ARENGINE_LIB INTERFACE ObjectTracking Basic)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${ObjectTracking_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_SLAMAndRender)
#    add_subdirectory(Basic)
#    add_subdirectory(CameraTracking)
#    add_subdirectory(Rendering)
#    target_link_libraries(ARENGINE_LIB INTERFACE Rendering Basic CameraTracking)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${Rendering_LIB_PATH} ${CameraTracking_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_T01)
#    add_subdirectory(Basic)
#    add_subdirectory(InputRealSense)
#    add_subdirectory(CameraTracking)
#    add_subdirectory(Rendering)
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic InputRealSense CameraTracking Rendering)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${InputRealSense_LIB_PATH} ${CameraTracking_LIB_PATH} ${Rendering_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_T02 OR ENABLE_T02_offline OR ENABLE_T02_record)
#    add_subdirectory(Basic)
#    add_subdirectory(InputRealSense)
#    # add_subdirectory(ObjectTracking)
#    # add_subdirectory(Rendering)
#    # target_link_libraries(ARENGINE_LIB INTERFACE Basic InputRealSense ObjectTracking Rendering)
#    # set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${InputRealSense_LIB_PATH} ${ObjectTracking_LIB_PATH} ${Rendering_LIB_PATH} PARENT_SCOPE)
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic InputRealSense)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${InputRealSense_LIB_PATH} PARENT_SCOPE)
#endif()
#
#
#if(ENABLE_RPC_Server)
#    add_subdirectory(Basic)
#    add_subdirectory(ObjectTracking)
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic ObjectTracking)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH}  ${ObjectTracking_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_RPC_Client)
#    add_subdirectory(Basic)
#    add_subdirectory(ObjectTracking)
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic ObjectTracking)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH}  ${ObjectTracking_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_T03_Reloc OR ENABLE_T03_Reloc_collect)
#    add_subdirectory(Basic)
#    add_subdirectory(InputRealSense)
#    add_subdirectory(CameraTracking)
#    add_subdirectory(Reloc)
#    # add_subdirectory(AlignModule)
#    add_subdirectory(Rendering)
#    # target_link_libraries(ARENGINE_LIB INTERFACE Basic InputRealSense CameraTracking Rendering)
#    # set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${InputRealSense_LIB_PATH} ${CameraTracking_LIB_PATH} ${Rendering_LIB_PATH} PARENT_SCOPE)
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic InputRealSense CameraTracking Reloc Rendering)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${InputRealSense_LIB_PATH} ${CameraTracking_LIB_PATH} ${Reloc_LIB_PATH} ${Rendering_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_T04_Reloc_ClientCollect OR ENABLE_T04_Reloc_ClientLoadMap)
#    add_subdirectory(Basic)
#    add_subdirectory(CameraTracking)  # change -> CameraTrakcing+Reloc
#    add_subdirectory(Rendering)
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic CameraTracking CameraTrackingServer Rendering)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${CameraTracking_LIB_PATH} ${Rendering_LIB_PATH} PARENT_SCOPE)
#endif()
#
#if(ENABLE_T04_Reloc_Server)
#    add_subdirectory(Basic)
#    add_subdirectory(CameraTracking)  # change -> CameraTrakcing+Reloc
#    target_link_libraries(ARENGINE_LIB INTERFACE Basic CameraTracking CameraTrackingServer)
#    set(SHARED_LIB_PATHS ${Basic_LIB_PATH} ${CameraTracking_LIB_PATH} PARENT_SCOPE)
#endif()
